--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,6 +1,6 @@
 .btn{
     height: 40px;
-    background-color:#353537;
+    background-color:#36383f;
     color: #ffff;
     font-size: 1em;
     font-family: 'Lato', sans-serif;
@@ -19,26 +19,39 @@
     color: lightgreen;
 }
 
-.green-btn{
-    height: 40px;
-    background-color:lightgreen;
-    color: green;
+.square-btn{
+    height: 50px;
+    width: 100%;
+    background-color:#36383f;
+    color: #ffff;
     font-size: 1em;
-    font-family: 'Ubuntu Condensed', sans-serif;
+    font-family: 'Lato', sans-serif;
     padding: 10px 25px;
-    border: 1px solid green;
+    border: 1px solid gray;
+    outline: none;
+    transition: 0.3s;
+}
+
+.green-btn{
+    height: 60px;
+    background-color:#47cf73;
+    color: black;
+    font-size: 1.6em;
+    font-family: 'Lato', sans-serif; 
+    padding: 10px 15px;
+    border: 1px solid #47cf73;
     border-radius: 4px;
     outline: none;
     transition: 0.3s;
 }
 
 .black-btn{
-    height: 40px;
+    height: 60px;
     background-color:black;
     color: white;
-    font-size: 1em;
-    font-family: 'Ubuntu Condensed', sans-serif;
-    padding: 10px 25px;
+    font-size: 1.6em;
+    font-family: 'Lato', sans-serif;
+    padding: 10px 15px;
     border: 1px solid black;
     border-radius: 4px;
     outline: none;
