--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,9 +3,8 @@
     height: 30%;
     background-color: #000;
     color: #fefefe;
-    font-family: "Ubuntu Condensed",sans-serif;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     align-items: top;
     margin-top: -4px;
     padding: 0px 0px 60px 0px;
