--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -1,17 +1,15 @@
-@media (max-width:875px){
+@media (max-width:865px){
     .navigation-wrapper{
         flex-direction: column;
         height: 100%;
     }
 
-    /* Left Column */
     .navigation-wrapper>.left-column{
         order: 1;
         margin-top: 10px;
         margin-bottom: 20px;
     }
-
-    /* Middle Column */   
+  
     .navigation-wrapper > .middle-column {
         order: 2;
         width: 100%;
@@ -20,7 +18,6 @@
         justify-content: center;
     }
 
-    /* Links wrapper */
     .links-wrapper {
         flex-direction: column;
         margin-bottom: 20px;
@@ -32,52 +29,49 @@
         width: 100%;
     }
 
-    /* Right Column */
     .navigation-wrapper > .right-column {
         order: 3;
         margin-top: 15px;
     }
     
-    /* btn-wrapper */
     .btn-wrapper {
         flex-direction: column;
         height: 100%;
     }
+
     .btn-wrapper > .nav-btn {
-        /* margin-top: 10px; */
         margin-bottom: 10px;
         font-size: 1.2em;
         width: 100%;
     }
+
     .btn-wrapper > .nav-btn>.btn{
         width: 100%;
     }
-    .btn-wrapper > .nav-btn>.green-btn{
-        font-size: 1em;
-    }
-    .btn-wrapper > .nav-btn>.black-btn{
+
+    .btn-wrapper > .nav-btn>.green-btn, .black-btn{
         font-size: 1em;
     }
     
-    /* Features section */ 
     .features-section {
         height: 100%;
         padding: 30px 10px 25px 40px;
     }
+
     .features-section > .columns-wrapper {
         width: 100%;
         grid-template-columns: 1fr;
         grid-gap: 0px;
     }
+
     .features-section>.columns-wrapper>.column>.btn-wrapper{
-        flex-direction: column;
-        
+        flex-direction: column; 
     }
 
-    /*Footer*/
     .footer {
         height: 100%;
     }
+
     .footer>.square-btn-wrapper{
         grid-template-columns: none;
     }
